--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcc 'PS'
 - !lcsh 'Paranormal fiction'
 - !lcsh 'Fantasy fiction'
+- GITenberg
 title: 'The Mystery of Evelin Delorme: A Hypnotic Story'
 url: http://www.gutenberg.org/ebooks/33814
